--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -19,6 +19,7 @@ $widths: (
   $max-width: if($width == '', '', #{$width-var});
   .content#{$width} { //.content-s
     max-width: #{$max-width} !important; //max-width: 600px;
+		@media #{$phone} { max-width: 100% !important; }
   }
 }
 
@@ -62,10 +63,34 @@ $sides: (
     $property: if($prefix == '', '', -#{$value});
     .m#{$prefix}-#{$space} { //.mb-space-xs
       margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;
+      &_mobile {
+        @media #{$phone} { margin#{$property}: #{$space-var} !important; /* margin-bottom: space-xs; */ }
+      }
+      &_tablet-and-below {
+        @media #{$tablet-and-below} { margin#{$property}: #{$space-var} !important; /* margin-bottom: space-xs; */ }
+      }
+      &_tablet {
+        @media #{$tablet} { margin#{$property}: #{$space-var} !important; /* margin-bottom: space-xs; */ }
+      }
+      &_desktop {
+        @media #{$desktop} { margin#{$property}: #{$space-var} !important; /* margin-bottom: space-xs; */ }
+      }
     }
 
     .p#{$prefix}-#{$space} { //.p-space-m
       padding#{$property}: #{$space-var} !important; //padding: space-m;
+      &_mobile {
+        @media #{$phone} { padding#{$property}: #{$space-var} !important; /* padding: space-m; */ }
+      }
+      &_tablet-and-below {
+        @media #{$tablet-and-below} { padding#{$property}: #{$space-var} !important; /* padding: space-m; */ }
+      }
+      &_tablet {
+        @media #{$tablet} { padding#{$property}: #{$space-var} !important; /* padding: space-m; */ }
+      }
+      &_desktop {
+        @media #{$desktop} { padding#{$property}: #{$space-var} !important; /* padding: space-m; */ }
+      }
     }
   }
 }
@@ -139,8 +164,14 @@ $sides: (
 
 .flex-column  { flex-direction: column; }
 .flex-wrap    { flex-wrap: wrap; }
+.flex-wrap {
+  &_mobile { @media #{$phone} { flex-wrap: wrap; } }
+  &_tablet-and-below { @media #{$tablet-and-below} { flex-wrap: wrap; } }
+  &_tablet { @media #{$tablet} { flex-wrap: wrap; } }
+}
 
-.flex-center   { align-items: center; }
+.flex-vcenter  { align-items: center; }
+.flex-center   { align-items: center; justify-content: center; }
 .flex-baseline { align-items: baseline; }
 .flex-stretch  { align-items: stretch; }
 .flex-start    { align-items: flex-start; }
@@ -155,3 +186,13 @@ $sides: (
 }
 .flex-grow { flex: 1 0 auto; }
 .flex-none { flex: none; }
+//Distribute children items in flex container evenly
+.flex-distribute > * { flex: 1 1 0px; }
+
+
+//Make item full width
+.flex-full {
+  &_mobile { @media #{$phone} { flex: 1 100% !important; } }
+  &_tablet-and-below { @media #{$tablet-and-below} { flex: 1 100% !important; } }
+  &_tablet { @media #{$tablet} { flex: 1 100% !important; } }
+}
